--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.8",
+    "@mui/lab": "^5.0.0-alpha.143",
     "@mui/material": "^5.13.0",
     "axios": "^1.4.0",
     "dotenv-webpack": "^8.0.1",
     "i18next": "^23.4.6",
     "i18next-resources-to-backend": "^1.1.4",
+    "localforage": "^1.10.0",
+    "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.2.2"
